# git-pr-rust

./: Cargo.toml  Makefile  rust-toolchain.toml  rustfmt.toml
src/: args.rs  cli.rs  git_commands.rs  main.rs  prinfo.rs  prinfo_gh.rs  shell.rs
src/prinfo/: d2.json  mod.rs  models.rs  prinfo.rs
src/prinfo/mock_data/: d1.json  d3.json  d4.json
