# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name    = "git-pr-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap                        = { version = "3.1.10", features = ["derive"] }
colored                     = { version = "2.0.0" }
console                     = "0.15.2"
git2                        = { version = "0.14.2" }
indicatif                   = "0.17.2"
indoc                       = { version = "1.0.7" }
itertools                   = { version = "0.10.5" }
log                         = { version = "0.4.16" }
octocrab                    = { version = "0.17.0" }
recap                       = { version = "0.1.2" }
serde                       = { version = "1.0.136" }
serde_json                  = { version = "1.0.89" }
simple_logger               = { version = "4.0.0", features = ["colors", "stderr"] }
spinners                    = { version = "4.0.0" }
struct-field-names-as-array = { version = "0.1.4" }
subprocess                  = { version = "0.2.8" }
unindent                    = { version = "0.1.8" }

[dev-dependencies]
pretty_assertions = "1.3.0"
